@@ -1,5 +1,10 @@
 New Windows Games:
+* Bus Driver
+* Din's Curse
 * Command & Conquer: Generals
+* Lost Planet: Extreme Condition
+* Harry Potter and the Half-Blood Prince
+* Pocket Tanks
 6/15/2011
 New Windows Games:
 * Alan Wake - GoG only
